# ansible-role-kafka

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  compass.yaml  pyproject.toml
defaults/: exporter.yml  main.yml
handlers/: main.yml
meta/: .galaxy_install_info  main.yml
tasks/: exporter.yml  main.yml
templates/: jmx_exporter.yaml.j2  kafka-exporter.service.j2  kafka.env.j2  kafka.service.j2  kraft.server.properties.j2  log4j.properties.j2  server.properties.j2  service.j2  systemd.service.j2  zookeeper.server.properties.j2
