[tool.poetry]
name = "ansible-role-kafka"
version = "0.2.1"
description = "Install and configure Kafka with Ansible."
authors = ["Remerge GmbH <sre@remerge.io>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
flake8-bugbear = "^22.10.27"
pylint = "^2.15.5"
tox = "^3.27.0"
molecule = {extras = ["docker"], version = "^4.0.3"}
ansible-lint = "^6.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
